updated index.js to fix the switch/prompt issue that was taking place

--- a/output/teamprofile.html
+++ b/output/teamprofile.html
@@ -23,14 +23,14 @@
                     
         <div class="card">
         <div class="header">
-            <h1 class="title">Chris</h1>
+            <h1 class="title">Chris Kennedy</h1>
             <h2 class="title">Manager</h2>
         </div>
         <div class="body">
             <ul class="list-group">
-                <li class="list-item">Manager ID: 5</li>
-                <li class="list-item">Email: chris@test.com</li>
-                <li class="list-item">Office Number: 10</li>
+                <li class="list-item">Manager ID: 10</li>
+                <li class="list-item">Email: chris@email.com</li>
+                <li class="list-item">Office Number: 55</li>
             </ul>
         </div>
     </div>
